fix vertical align of button text

--- a/public/css/storage.css
+++ b/public/css/storage.css
@@ -45,7 +45,6 @@
             color: azure;
             padding-left: 1vw;
             padding-right: 1vw;
-            padding-top: 0.5vh;
             width: 9.3vw;
             height: 7vh;
             cursor: pointer;
